cmake_minimum_required(VERSION 3.12)
project(answer839)

set(CMAKE_CXX_STANDARD 14)

add_executable(answer839 other/toHex.cpp 2017/second.cpp 2017/third.cpp 2017/fourth.cpp 2017/fifth.cpp other/file.cpp other/sort.c 2017/sixth.cpp datastructure/binarytree/createTree.cpp datastructure/queue/implementQueueWithArray.cpp datastructure/queue/implementCircularQueueWithArray.cpp other/charArray.cpp)