cmake_minimum_required(VERSION 3.12)
project(answer839)

set(CMAKE_CXX_STANDARD 14)

add_executable(answer839 other/toHex.cpp 2017/2th.cpp 2017/3th.cpp 2017/4th.cpp 2017/5th.cpp other/file.cpp other/sort.c 2017/6th.cpp datastructure/binarytree/createTree.cpp datastructure/queue/implementQueueWithArray.cpp datastructure/queue/implementCircularQueueWithArray.cpp other/charArray.cpp 2017/9th.cpp util/binarytree.cpp util/binarytree.h 2017/1th.cpp)