cmake_minimum_required(VERSION 3.12)
project(answer839)

set(CMAKE_CXX_STANDARD 14)

add_executable(answer839 other/toHex.cpp 2017/2th.cpp 2017/3th.cpp 2017/4th.cpp 2017/5th.cpp other/file.cpp other/sort.c 2017/6th.cpp datastructure/binarytree/createTree.cpp datastructure/queue/implementQueueWithArray.cpp datastructure/queue/implementCircularQueueWithArray.cpp other/charArray.cpp 2017/9th.cpp util/binarytree.cpp util/binarytree.h 2017/1th.cpp 2018/1st.cpp 2018/2nd.cpp 2018/3rd.cpp 2018/4th.cpp 2018/5th.cpp 2018/6th.cpp 2018/8th.cpp 2015/1st.cpp 2015/3rd.cpp util/array.cpp util/array.h 2015/4th.cpp util/listnode.cpp util/listnode.h 2015/5th.cpp 2015/6th.cpp 2015/8th.cpp 2015/10th.cpp 2014/1st.cpp 2014/2nd.cpp 2014/3rd.cpp 2014/4th.cpp 2014/5th.cpp 2014/7th.cpp 2014/8th.cpp 2013/1st.cpp 2013/2nd.cpp 2013/3rd.c 2013/4th.cpp 2013/5th.cpp 2013/8th.cpp 2013/9th.cpp 2016/1st.cpp 2016/2nd.cpp 2016/3rd.cpp 2016/4th.cpp 2016/5th.cpp 2016/9th.cpp 2016/11th.cpp util/graph.cpp util/graph.h 2012/3.1rd.cpp)

